--- a/config/templates/allauth/layouts/base.html
+++ b/config/templates/allauth/layouts/base.html
@@ -8,7 +8,7 @@
         <title>ODK Publish</title>
         <link href="{% static 'css/main.css' %}" rel="stylesheet" />
     </head>
-    <body class="bg-primary-light">
+    <body class="bg-white">
         <div class="container mx-auto mt-4">
             {% block content %}
             {% endblock content %}
