--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
         <script src="https://unpkg.com/htmx.org@2.0.2"
                 integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ"
                 crossorigin="anonymous"></script>
@@ -25,55 +25,47 @@
         {% block extra-css %}
         {% endblock extra-css %}
     </head>
-    <body class="bg-primary-light">
+    <body class="bg-white">
         <header class="antialiased">
             <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
                 <div class="flex flex-wrap justify-between items-center">
                     <div class="flex justify-start items-center">
-                        <a href="{% url 'document_embeddings' %}" class="flex mr-4">
+                        <a href="" class="flex mr-4">
                             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ODK Publish</span>
                         </a>
                     </div>
-                    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                    <!-- <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                         <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                             <li>
-                                <a href="{% url 'document_home' %}"
-                                   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Home</a>
+                                <a href="" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Home</a>
                             </li>
                             <li>
-                                <a href="{% url 'document_embeddings' %}"
-                                   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Search</a>
+                                <a href="" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Search</a>
                             </li>
                             <li>
-                                <a href="{% url 'chat' %}"
-                                   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Chat</a>
+                                <a href="" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Chat</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     {% if request.user.is_authenticated %}
                         <div class="flex items-center lg:order-2">
-                            <a href="{% url 'add_document' %}">
-                                <button type="button"
-                                        class="btn btn-primary hidden sm:inline-flex items-center justify-center text-xs ">
-                                    <svg aria-hidden="true"
-                                         class="mr-1 -ml-1 w-5 h-5"
-                                         fill="currentColor"
-                                         viewBox="0 0 20 20"
-                                         xmlns="http://www.w3.org/2000/svg">
+                            <!-- <a href="">
+                                <button type="button" class="btn btn-primary hidden sm:inline-flex items-center justify-center text-xs ">
+                                    <svg aria-hidden="true" class="mr-1 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd">
                                         </path>
                                     </svg>
                                     Add Document
                                 </button>
-                            </a>
+                            </a> -->
                             <button type="button"
-                                    class="flex mx-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                                    class="flex mx-3 text-sm rounded-full md:mr-0 focus:ring-4 focus:ring-red-200 dark:focus:ring-gray-600 cursor-pointer"
                                     id="user-menu-button"
                                     aria-expanded="false"
                                     data-dropdown-toggle="dropdown">
                                 <span class="sr-only">Open user menu</span>
-                                <div class="relative inline-flex items-center justify-center w-10 h-10 overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600">
-                                    <span class="font-medium text-gray-600 dark:text-gray-300">{{ request.user.first_name|first }}{{ request.user.last_name|first }}</span>
+                                <div class="relative inline-flex items-center justify-center w-10 h-10 overflow-hidden ring-2 ring-red-300  rounded-full dark:bg-gray-600">
+                                    <span class="font-medium text-red dark:text-gray-300">{{ request.user.first_name|first }}{{ request.user.last_name|first }}</span>
                                 </div>
                             </button>
                             <!-- Dropdown menu -->
