--- a/config/templates/home.html
+++ b/config/templates/home.html
@@ -3,9 +3,7 @@
     <section class="mx-auto max-w-screen-xl px-4 lg:px-12 bg-white dark:bg-gray-900">
         <div class="py-8 px-4 mx-auto max-w-2xl lg:py-4">
             <h1 class="mb-4 text-2xl font-bold text-gray-900 dark:text-white">Welcome to ODK Publish</h1>
-            <p class="text-lg text-gray-800">
-                ODK Publish is a tool for managing and publishing forms to ODK Central.
-            </p>
+            <p class="text-lg text-gray-800">ODK Publish is a tool for managing and publishing forms to ODK Central.</p>
             <div class="flex mt-10">
                 <svg class="w-5 h-5 mr-2 text-green shrink-0"
                      fill="currentColor"
@@ -15,7 +13,9 @@
                     </path>
                 </svg>
                 <div>
-                    <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Get started quickly with Google Sheets</h3>
+                    <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">
+                        Get started quickly with Google Sheets
+                    </h3>
                     <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Import your own content and documents</p>
                 </div>
             </div>
