--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -25,94 +25,24 @@
         {% block extra-css %}
         {% endblock extra-css %}
     </head>
-    <body class="bg-white">
-        <header class="antialiased">
-            <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
-                <div class="flex flex-wrap justify-between items-center">
-                    <div class="flex justify-start items-center">
-                        <a href="" class="flex mr-4">
-                            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ODK Publish</span>
-                        </a>
-                    </div>
-                    <!-- <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-                        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                            <li>
-                                <a href="" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Home</a>
-                            </li>
-                            <li>
-                                <a href="" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Search</a>
-                            </li>
-                            <li>
-                                <a href="" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Chat</a>
-                            </li>
-                        </ul>
-                    </div> -->
-                    {% if request.user.is_authenticated %}
-                        <div class="flex items-center lg:order-2">
-                            <!-- <a href="">
-                                <button type="button" class="btn btn-primary hidden sm:inline-flex items-center justify-center text-xs ">
-                                    <svg aria-hidden="true" class="mr-1 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd">
-                                        </path>
-                                    </svg>
-                                    Add Document
-                                </button>
-                            </a> -->
-                            <button type="button"
-                                    class="flex mx-3 text-sm rounded-full md:mr-0 focus:ring-4 focus:ring-red-200 dark:focus:ring-gray-600 cursor-pointer"
-                                    id="user-menu-button"
-                                    aria-expanded="false"
-                                    data-dropdown-toggle="dropdown">
-                                <span class="sr-only">Open user menu</span>
-                                <div class="relative inline-flex items-center justify-center w-10 h-10 overflow-hidden ring-2 ring-red-300  rounded-full dark:bg-gray-600">
-                                    <span class="font-medium text-red dark:text-gray-300">{{ request.user.first_name|first }}{{ request.user.last_name|first }}</span>
-                                </div>
-                            </button>
-                            <!-- Dropdown menu -->
-                            <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
-                                 id="dropdown">
-                                <div class="py-3 px-4">
-                                    <span class="block text-sm font-semibold text-gray-900 dark:text-white">{{ request.user.first_name }} {{ request.user.last_name }}</span>
-                                    <span class="block text-sm text-gray-500 truncate dark:text-gray-400">{{ request.user.email }}</span>
-                                </div>
-                                <ul class="py-1 text-gray-500 dark:text-gray-400"
-                                    aria-labelledby="dropdown">
-                                    <li>
-                                        <a href="{% url 'socialaccount_connections' %}"
-                                           class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">Account settings</a>
-                                    </li>
-                                    {% if request.user.is_superuser %}
-                                        <li>
-                                            <a href="{% url 'admin:index' %}"
-                                               class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">Admin</a>
-                                        </li>
-                                    {% endif %}
-                                </ul>
-                                <ul class="py-1 text-gray-500 dark:text-gray-400"
-                                    aria-labelledby="dropdown">
-                                    <li>
-                                        <a href="{% url 'account_logout' %}"
-                                           class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign out</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    {% endif %}
+    <body class="bg-gray-50 dark:bg-gray-900">
+        {% include "includes/_navbar.html" %}
+        {% block extra-nav %}
+        {% endblock extra-nav %}
+        <div class="{% if request.path == '/' %} mt-8 {% elif request.path != '/accounts/login/' %} w-full top-[25px] {% endif %} mb-20">
+            {% if messages %}
+                <div class="mx-auto max-w-screen-xl px-4 lg:px-12" id="messages">
+                    {% for message in messages %}
+                        {% if message.tags == 'info' or message.tags == 'success' %}
+                            <div class="p-4 mb-4 text-sm text-blue-800 rounded-lg bg-brand-accent-light dark:bg-gray-800 dark:text-blue-400"
+                                 role="alert">{{ message }}</div>
+                        {% else %}
+                            <div class="p-4 mb-4 text-sm text-brand-danger-medium rounded-lg bg-brand-danger-light dark:bg-gray-800 dark:text-brand-danger-light"
+                                 role="alert">{{ message }}</div>
+                        {% endif %}
+                    {% endfor %}
                 </div>
-            </nav>
-        </header>
-        <div class="{% if request.path == '/' %} mt-8 {% elif request.path != '/accounts/login/' %} w-full top-[25px] p-4{% endif %} mb-20">
-            <div class="mx-auto max-w-screen-xl px-4 lg:px-12" id="messages">
-                {% for message in messages %}
-                    {% if message.tags == 'info' or message.tags == 'success' %}
-                        <div class="p-4 mb-4 text-sm text-blue-800 rounded-lg bg-brand-accent-light dark:bg-gray-800 dark:text-blue-400"
-                             role="alert">{{ message }}</div>
-                    {% else %}
-                        <div class="p-4 mb-4 text-sm text-brand-danger-medium rounded-lg bg-brand-danger-light dark:bg-gray-800 dark:text-brand-danger-light"
-                             role="alert">{{ message }}</div>
-                    {% endif %}
-                {% endfor %}
-            </div>
+            {% endif %}
             {% block content %}
             {% endblock content %}
         </div>
@@ -137,6 +67,54 @@
                 `
                 messages.insertAdjacentHTML("beforeend", message)
             })
+
+            // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+            if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+                document.documentElement.classList.add('dark');
+            } else {
+                document.documentElement.classList.remove('dark')
+            }
+
+            var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
+            var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
+
+            // Change the icons inside the button based on previous settings
+            if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+                themeToggleLightIcon.classList.remove('hidden');
+            } else {
+                themeToggleDarkIcon.classList.remove('hidden');
+            }
+
+            var themeToggleBtn = document.getElementById('theme-toggle');
+
+            themeToggleBtn.addEventListener('click', function() {
+
+                // toggle icons inside button
+                themeToggleDarkIcon.classList.toggle('hidden');
+                themeToggleLightIcon.classList.toggle('hidden');
+
+                // if set via local storage previously
+                if (localStorage.getItem('color-theme')) {
+                    if (localStorage.getItem('color-theme') === 'light') {
+                        document.documentElement.classList.add('dark');
+                        localStorage.setItem('color-theme', 'dark');
+                    } else {
+                        document.documentElement.classList.remove('dark');
+                        localStorage.setItem('color-theme', 'light');
+                    }
+
+                // if NOT set via local storage previously
+                } else {
+                    if (document.documentElement.classList.contains('dark')) {
+                        document.documentElement.classList.remove('dark');
+                        localStorage.setItem('color-theme', 'light');
+                    } else {
+                        document.documentElement.classList.add('dark');
+                        localStorage.setItem('color-theme', 'dark');
+                    }
+                }
+
+            });
         </script>
     </body>
 </html>
