add form template list view

--- a/apps/patterns/templates/patterns/tables/table-partial.html
+++ b/apps/patterns/templates/patterns/tables/table-partial.html
@@ -2,7 +2,7 @@
 <div id="inner-table">
     {% block table-header %}
     {% endblock table-header %}
-    <div class="bg-white dark:bg-gray-800 shadow-md sm:rounded-lg overflow-x-auto">
+    <div class="bg-white sm:rounded-md overflow-x-auto">
         {# Progress indicator #}
         <div class="progress">
             <div class="indeterminate"></div>
