--- a/config/templates/includes/_navbar.html
+++ b/config/templates/includes/_navbar.html
@@ -1,5 +1,5 @@
 <header class="flex flex-col antialiased">
-    <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1">
+    <nav class="bg-gray-50 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1">
         <div class="flex justify-between items-center">
             <div class="flex justify-start items-center">
                 <a href="{% url 'home' %}" class="flex mr-6">
@@ -132,7 +132,7 @@
     </nav>
     {% if request.odk_project %}
         <nav id="toggleMobileMenu"
-             class="hidden order-3 bg-white dark:border-b shadow-sm dark:bg-gray-900 md:block dark:border-gray-800 md:order-2">
+             class="hidden order-3 bg-gray-50 dark:border-b shadow-sm dark:bg-gray-900 md:block dark:border-gray-800 md:order-2">
             <div class="px-0 lg:px-6">
                 <div class="flex items-center">
                     <ul class="flex flex-col mt-0 w-full text-sm font-medium md:flex-row">
