--- a/apps/patterns/templates/patterns/tables/table.html
+++ b/apps/patterns/templates/patterns/tables/table.html
@@ -1,129 +1,148 @@
-{% extends "patterns/django_tables2/tailwind.html" %}
 {% load i18n l10n django_tables2 %}
-{% block table.thead %}
-    {% if table.show_header %}
-        <thead class="text-xs text-white uppercase bg-primary dark:bg-gray-700 dark:text-gray-400"
-               {{ table.attrs.thead.as_html }}>
-            <tr>
-                {% for column in table.columns %}
-                    <th {{ column.attrs.th.as_html }}
-                        {% if table.orderable %} hx-get="{% querystring table.prefixed_order_by_field=column.order_by_alias.next %}" hx-trigger="click" hx-target="#inner-table" hx-swap="outerHTML" hx-push-url="true" hx-indicator=".progress" {% endif %}>
-                        <span class="px-4 py-3 whitespace-nowrap {% if table.orderable %}hover:font-bold hover:text-gray-400 cursor-pointer{% endif %}">{{ column.header }}</span>
-                    </th>
-                {% endfor %}
-                {% block extra-columns %}
-                {% endblock extra-columns %}
-            </tr>
-        </thead>
-    {% endif %}
-{% endblock table.thead %}
-{% block table.tbody %}
-    <tbody {{ table.attrs.tbody.as_html }} class="mb-4">
-        {% for row in table.paginated_rows %}
-            {% block table.tbody.row %}
-                <tr class="border-b dark:border-gray-700 text-sm row">
-                    {% for column, cell in row.items %}
-                        <td class="px-4 py-3 {% if column.accessor == 'id' %}font-medium text-gray-900 hover:text-gray-400 whitespace-nowrap dark:text-white{% endif %}">
-                            {% if column.localize == None %}
-                                {{ cell }}
-                            {% else %}
-                                {% if column.localize %}
-                                    {{ cell|localize }}
-                                {% else %}
-                                    {{ cell|unlocalize }}
-                                {% endif %}
+{% block table-wrapper %}
+    <div class="table-container">
+        {% block table %}
+            <table {% render_attrs table.attrs class="text-left w-full h-full text-sm text-gray-500 dark:text-gray-400 dark:bg-gray-800" %}>
+                {% block table.thead %}
+                    {% if table.show_header %}
+                        <thead class="text-xs text-gray-700 uppercase bg-primary-100 dark:bg-gray-700 dark:text-gray-400"
+                               {{ table.attrs.thead.as_html }}>
+                            <tr>
+                                {% for column in table.columns %}
+                                    <th {{ column.attrs.th.as_html }}
+                                        {% if table.orderable %} hx-get="{% querystring table.prefixed_order_by_field=column.order_by_alias.next %}" hx-trigger="click" hx-target="#inner-table" hx-swap="outerHTML" hx-push-url="true" hx-indicator=".progress" {% endif %}>
+                                        <span class="whitespace-nowrap {% if table.orderable %}hover:font-bold hover:text-gray-400 cursor-pointer{% endif %}">{{ column.header }}</span>
+                                    </th>
+                                {% endfor %}
+                                {% block extra-columns %}
+                                {% endblock extra-columns %}
+                            </tr>
+                        </thead>
+                    {% endif %}
+                {% endblock table.thead %}
+                {% block table.tbody %}
+                    <tbody {{ table.attrs.tbody.as_html }} class="mb-4">
+                        {% for row in table.paginated_rows %}
+                            {% block table.tbody.row %}
+                                <tr class="border-b border-primary-100 dark:border-gray-700 text-sm row">
+                                    {% for column, cell in row.items %}
+                                        <td class="px-4 py-3 {% if column.accessor == 'id' %}font-medium text-gray-900 hover:text-gray-400 whitespace-nowrap dark:text-white{% endif %}">
+                                            {% if column.localize == None %}
+                                                {{ cell }}
+                                            {% else %}
+                                                {% if column.localize %}
+                                                    {{ cell|localize }}
+                                                {% else %}
+                                                    {{ cell|unlocalize }}
+                                                {% endif %}
+                                            {% endif %}
+                                        </td>
+                                    {% endfor %}
+                                    {% block extra-column-cells %}
+                                    {% endblock extra-column-cells %}
+                                </tr>
+                            {% endblock table.tbody.row %}
+                        {% empty %}
+                            {% if table.empty_text %}
+                                {% block table.tbody.empty_text %}
+                                    <tr>
+                                        <td colspan="{{ table.columns|length }}">{{ table.empty_text }}</td>
+                                    </tr>
+                                {% endblock table.tbody.empty_text %}
                             {% endif %}
-                        </td>
-                    {% endfor %}
-                    {% block extra-column-cells %}
-                    {% endblock extra-column-cells %}
-                </tr>
-            {% endblock table.tbody.row %}
-        {% empty %}
-            {% if table.empty_text %}
-                {% block table.tbody.empty_text %}
-                    <tr>
-                        <td colspan="{{ table.columns|length }}">{{ table.empty_text }}</td>
-                    </tr>
-                {% endblock table.tbody.empty_text %}
-            {% endif %}
-        {% endfor %}
-    </tbody>
-{% endblock table.tbody %}
-{% block pagination %}
-    {% if table.paginator %}
-        <div class="flex justify-between items-center px-4">
-            <span class="text-sm font-normal text-gray-500 dark:text-gray-400">
-                Showing
-                <span class="font-semibold text-blue-900 dark:text-white">{{ table.page.start_index }}-{{ table.page.end_index }}</span>
-                of
-                <span class="font-semibold text-blue-900 dark:text-white">{{ table.paginator.count }}</span>
-            </span>
-            <nav class="flex flex-col md:flex-row justify-between items-start md:items-center space-y-3 md:space-y-0 p-4">
-                {% if table.page and table.paginator.num_pages > 1 %}
-                    <ul class="inline-flex items-stretch -space-x-px text-sm">
-                        {% if table.page.has_previous %}
-                            {% block pagination.previous %}
-                                <li>
-                                    <a hx-get="{% querystring table.prefixed_page_field=table.page.previous_page_number %}"
-                                       hx-target="#inner-table"
-                                       hx-swap="outerHTML"
-                                       hx-push-url="true"
-                                       hx-indicator=".progress"
-                                       class="flex items-center justify-center px-3 h-8 ml-0 leading-tight text-gray-500 bg-white border border-brand-accent-medium rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer">
-                                        <svg class="w-3 h-3 text-gray-500 dark:text-white"
-                                             aria-hidden="true"
-                                             xmlns="http://www.w3.org/2000/svg"
-                                             fill="none"
-                                             viewBox="0 0 8 14">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 1 1.3 6.326a.91.91 0 0 0 0 1.348L7 13" />
-                                        </svg>
-                                    </a>
-                                </li>
-                            {% endblock pagination.previous %}
-                        {% endif %}
-                        {% if table.page.has_previous or table.page.has_next %}
-                            {% block pagination.range %}
-                                {% for p in table.page|table_page_range:table.paginator %}
-                                    <li>
-                                        {% if p == '...' %}
-                                            <a href="#"
-                                               class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-brand-accent-medium hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer">{{ p }}</a>
-                                        {% else %}
-                                            <a hx-get="{% querystring table.prefixed_page_field=p %}"
+                        {% endfor %}
+                    </tbody>
+                {% endblock table.tbody %}
+                {% block table.tfoot %}
+                    {% if table.has_footer %}
+                        <tfoot {{ table.attrs.tfoot.as_html }}>
+                            <tr>
+                                {% for column in table.columns %}
+                                    <td {{ column.attrs.tf.as_html }}>{{ column.footer }}
+                                    </td>
+                                {% endfor %}
+                            </tr>
+                        </tfoot>
+                    {% endif %}
+                {% endblock table.tfoot %}
+            </table>
+        {% endblock table %}
+        {% block pagination %}
+            {% if table.paginator %}
+                <div class="flex justify-between items-center dark:bg-gray-900">
+                    <span class="text-sm font-normal text-gray-500 dark:text-gray-400">
+                        Showing
+                        <span class="font-semibold text-gray-700 dark:text-white">{{ table.page.start_index }}-{{ table.page.end_index }}</span>
+                        of
+                        <span class="font-semibold text-gray-700 dark:text-white">{{ table.paginator.count }}</span>
+                    </span>
+                    <nav class="flex flex-col md:flex-row justify-between items-start md:items-center space-y-3 md:space-y-0 p-4">
+                        {% if table.page and table.paginator.num_pages > 1 %}
+                            <ul class="inline-flex items-stretch -space-x-px text-sm">
+                                {% if table.page.has_previous %}
+                                    {% block pagination.previous %}
+                                        <li>
+                                            <a hx-get="{% querystring table.prefixed_page_field=table.page.previous_page_number %}"
                                                hx-target="#inner-table"
                                                hx-swap="outerHTML"
                                                hx-push-url="true"
                                                hx-indicator=".progress"
-                                               {% if p == table.page.number %} class="flex items-center justify-center px-3 h-8 text-blue-600 border border-brand-accent-medium bg-blue-50 hover:bg-brand-accent-light hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white hover:font-bold cursor-pointer" {% else %} class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-brand-accent-medium hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer" {% endif %}>{{ p }}</a>
-                                        {% endif %}
-                                    </li>
-                                {% endfor %}
-                            {% endblock pagination.range %}
+                                               class="flex items-center justify-center px-3 h-8 ml-0 leading-tight text-gray-500 bg-white border border-brand-accent-medium rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer">
+                                                <svg class="w-3 h-3 text-gray-500 dark:text-white"
+                                                     aria-hidden="true"
+                                                     xmlns="http://www.w3.org/2000/svg"
+                                                     fill="none"
+                                                     viewBox="0 0 8 14">
+                                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 1 1.3 6.326a.91.91 0 0 0 0 1.348L7 13" />
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    {% endblock pagination.previous %}
+                                {% endif %}
+                                {% if table.page.has_previous or table.page.has_next %}
+                                    {% block pagination.range %}
+                                        {% for p in table.page|table_page_range:table.paginator %}
+                                            <li>
+                                                {% if p == '...' %}
+                                                    <a href="#"
+                                                       class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-brand-accent-medium hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer">{{ p }}</a>
+                                                {% else %}
+                                                    <a hx-get="{% querystring table.prefixed_page_field=p %}"
+                                                       hx-target="#inner-table"
+                                                       hx-swap="outerHTML"
+                                                       hx-push-url="true"
+                                                       hx-indicator=".progress"
+                                                       {% if p == table.page.number %} class="flex items-center justify-center px-3 h-8 text-blue-600 border border-brand-accent-medium bg-blue-50 hover:bg-brand-accent-light hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white hover:font-bold cursor-pointer" {% else %} class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-brand-accent-medium hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer" {% endif %}>{{ p }}</a>
+                                                {% endif %}
+                                            </li>
+                                        {% endfor %}
+                                    {% endblock pagination.range %}
+                                {% endif %}
+                                {% if table.page.has_next %}
+                                    {% block pagination.next %}
+                                        <li>
+                                            <a hx-get="{% querystring table.prefixed_page_field=table.page.next_page_number %}"
+                                               hx-target="#inner-table"
+                                               hx-swap="outerHTML"
+                                               hx-push-url="true"
+                                               hx-indicator=".progress"
+                                               class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-brand-accent-medium rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer">
+                                                <svg class="w-3 h-3 text-gray-500 dark:text-white"
+                                                     aria-hidden="true"
+                                                     xmlns="http://www.w3.org/2000/svg"
+                                                     fill="none"
+                                                     viewBox="0 0 8 14">
+                                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    {% endblock pagination.next %}
+                                {% endif %}
+                            </ul>
                         {% endif %}
-                        {% if table.page.has_next %}
-                            {% block pagination.next %}
-                                <li>
-                                    <a hx-get="{% querystring table.prefixed_page_field=table.page.next_page_number %}"
-                                       hx-target="#inner-table"
-                                       hx-swap="outerHTML"
-                                       hx-push-url="true"
-                                       hx-indicator=".progress"
-                                       class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-brand-accent-medium rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white hover:font-bold cursor-pointer">
-                                        <svg class="w-3 h-3 text-gray-500 dark:text-white"
-                                             aria-hidden="true"
-                                             xmlns="http://www.w3.org/2000/svg"
-                                             fill="none"
-                                             viewBox="0 0 8 14">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
-                                        </svg>
-                                    </a>
-                                </li>
-                            {% endblock pagination.next %}
-                        {% endif %}
-                    </ul>
-                {% endif %}
-            </nav>
-        </div>
-    {% endif %}
-{% endblock pagination %}
+                    </nav>
+                </div>
+            {% endif %}
+        {% endblock pagination %}
+    </div>
+{% endblock table-wrapper %}
