--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -25,7 +25,7 @@
         {% block extra-css %}
         {% endblock extra-css %}
     </head>
-    <body class="bg-gray-50 dark:bg-gray-900">
+    <body class="bg-white dark:bg-gray-900">
         {% include "includes/_navbar.html" %}
         {% block extra-nav %}
         {% endblock extra-nav %}
