--- a/apps/patterns/templates/patterns/forms/errors.html
+++ b/apps/patterns/templates/patterns/forms/errors.html
@@ -1,3 +1,1 @@
-{% for error in errors %}
-    <p class="mt-2 text-sm text-brand-danger-medium dark:text-brand-danger-light">{{ error }}</p>
-{% endfor %}
+{% for error in errors %}<p class="mt-2 text-sm text-error dark:text-brand-danger-light">{{ error }}</p>{% endfor %}
