--- a/apps/patterns/templates/patterns/forms/label.html
+++ b/apps/patterns/templates/patterns/forms/label.html
@@ -6,7 +6,7 @@
         {% if not field.errors %}
             text-gray-900 dark:text-white
         {% else %}
-            text-red
+            text-error
         {% endif %}
         ">
         {{ label|title }}
@@ -16,17 +16,19 @@
             <span data-popover-target="{{ attrs.for }}_popover"
                   data-tooltip-placement="right"
                   class="ml-2 mb-2">
-                <svg class="w-4 h-4 text-gray-800 dark:text-white"
+                <svg class="w-4 h-4 text-gray-500 dark:text-gray-200"
                      aria-hidden="true"
                      xmlns="http://www.w3.org/2000/svg"
-                     fill="currentColor"
-                     viewBox="0 0 20 20">
-                    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                     width="24"
+                     height="24"
+                     fill="none"
+                     viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                 </svg>
             </span>
             <div id="{{ attrs.for }}_popover"
                  role="tooltip"
-                 class="absolute max-w-sm z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                 class="absolute max-w-sm z-10 invisible inline-block px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg shadow-xs opacity-0 tooltip dark:border-gray-700 dark:text-white dark:bg-gray-700">
                 {{ field.help_text }}
                 <div class="tooltip-arrow" data-popper-arrow></div>
             </div>
