--- a/config/templates/odk_publish/app_user_export.html
+++ b/config/templates/odk_publish/app_user_export.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <p class="mb-4 dark:text-gray-400">Export App Users to bulk edit user attributes and project template variables.</p>
     <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
         {{ form.media }}
         <form method="post" class="max-w-2xl">
@@ -11,7 +12,7 @@
                     {{ form.format.errors }}
                 </div>
                 <div class="flex items-center space-x-4">
-                    <button type="submit" class="btn btn-outline btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-outline btn-primary">Export app users</button>
                     <a type="button"
                        class="btn btn-outline"
                        href="{% url 'odk_publish:app-user-list' request.odk_project.pk %}">Cancel</a>
