--- a/config/templates/odk_publish/app_user_import.html
+++ b/config/templates/odk_publish/app_user_import.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
+    <p class="mb-4 dark:text-gray-400">Import App Users using a file previously exported from this project.</p>
+    <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8">
         {{ form.media }}
         <form method="post"
               class="max-w-2xl"
@@ -10,7 +11,7 @@
             {% csrf_token %}
             <div class="grid gap-4 sm:grid-cols-1 sm:gap-6">
                 {% for field in form.visible_fields %}
-                    <div id="id_import_file_container">
+                    <div>
                         {{ field.label_tag }}
                         {{ field }}
                         {{ field.errors }}
@@ -21,7 +22,7 @@
                             :disabled="submitting"
                             :class="{'btn-disabled': submitting}"
                             class="btn btn-outline btn-primary">
-                        Submit
+                        Import app users
                         <svg aria-hidden="true"
                              role="status"
                              x-cloak
