run initFlowbite after htmx swaps; upgrade flowbite and htmx JS

--- a/config/templates/includes/navbar.html
+++ b/config/templates/includes/navbar.html
@@ -128,19 +128,21 @@
                         </div>
                     </div>
                 {% endif %}
-                <button type="button"
-                        id="toggleMobileMenuButton"
-                        data-collapse-toggle="toggleMobileMenu"
-                        class="items-center p-2 text-gray-500 rounded-lg md:ml-2 md:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600">
-                    <span class="sr-only">Open menu</span>
-                    <svg class="w-[18px] h-[18px]"
-                         aria-hidden="true"
-                         xmlns="http://www.w3.org/2000/svg"
-                         fill="none"
-                         viewBox="0 0 17 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
-                    </svg>
-                </button>
+                {% if request.odk_project %}
+                    <button type="button"
+                            id="toggleMobileMenuButton"
+                            data-collapse-toggle="toggleMobileMenu"
+                            class="items-center p-2 text-gray-500 rounded-lg md:ml-2 md:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600">
+                        <span class="sr-only">Open menu</span>
+                        <svg class="w-[18px] h-[18px]"
+                             aria-hidden="true"
+                             xmlns="http://www.w3.org/2000/svg"
+                             fill="none"
+                             viewBox="0 0 17 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
+                        </svg>
+                    </button>
+                {% endif %}
             </div>
         </div>
     </nav>
